<resources>
    <string name="app_name">Smart Note</string>
    <string name="choose_one">Choose one</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_events">Events</string>
    <string name="myKey">nov_key</string>
    <string name="menu_shopping">Shopping</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sales">Discounts</string>
    <string name="menu_notes">Text Notes</string>
    <string name="menu_share">Share list</string>
    <string name="menu_delete">Delete list</string>
    <string name="menu_bank_accounts">Bank Accounts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="menu_credentias">Credentials</string>
    <string name="title_activity_version">Version</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_privacy_policy">PrivacyPolicy</string>
    <string name="info">What information do we collect? When ordering or registering on our apps or website, as appropriate, you may be asked to enter your e-mail address. Some apps or services may acquire your location data, but this data is obtained after a clear explanation and your consent to start using it.</string>
    <string name="day_mode">Day Mode</string>
    <string name="rate">Rate</string>
    <string name="if_you_likethis_app_please_rate_us_5_stars">If you like this app, please rate us 5 stars</string>
    <string name="we_hope_you_enjoyed_our_app">We hope you enjoyed our app</string>
    <string name="event_text">Add event..</string>
    <string name="amount">Amount</string>
    <string name="from">From</string>
    <string name="bank_account">Bank Account</string>
    <string name="put_values">Put values!</string>
    <string name="delete_goods">Delete the goods?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="share">Share</string>
    <string name="delete_credentials">Delete this credentials?</string>
    <string name="version_1_0_0">Version 1.1.0</string>
    <string name="smart_note">Smart Note</string>
    <string name="please_recomend_our_app">Please recomend our app</string>
    <string name="to">To</string>
    <string name="_01_01_2021">01.01.2021</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="custom">Custom</string>
    <string name="search_here">Search Here</string>
    <string name="shared">Shared</string>
    <string name="about_smart_note">About Smart Note</string>
    <string name="contact">Contact</string>
    <string name="rate_us">Rate us</string>
    <string name="enter_the_product_name">Enter the product name</string>
    <string name="salary_account">Account type</string>
    <string name="bank">Bank</string>
    <string name="data">Date</string>
    <string name="event">Event</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="percentage">% Economy</string>
    <string name="goods">Goods</string>
    <string name="note">Note</string>
    <string name="thing">Thing</string>
    <string name="brend">Brend</string>
    <string name="discount">Discount</string>
    <string name="true_price">True price</string>
    <string name="bank_name">Bank name</string>
    <string name="account_number">Account number</string>
    <string name="name_surname">Name, Surname</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="reference">Reference</string>
    <string name="ok">Ok</string>
    <string name="unit_of_goods">Unit of goods</string>
    <string name="economy">Economy</string>
    <string name="account_type">Account Type</string>
    <string name="shoppings">Shoppings</string>
    <string name="events">Events</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="text_notes">Text Notes</string>
    <string name="text_note">Text Note</string>
    <string name="another">Another</string>
    <string name="settings">Settings</string>
    <string name="delete_the_goods">Delete the goods?</string>
    <string name="everyday_notes">Everyday Notes</string>
    <string name="delete_the_note">Delete the note?</string>
    <string name="delete_the_item">Delete the item?</string>
    <string name="delete_the_list">Delete the list?</string>
    <string name="select_language">Select Language</string>
    <string name="very_bad">Very bad</string>
    <string name="need_some_impovement">Need some improvement</string>
    <string name="good">Good</string>
    <string name="great">Great</string>
    <string name="awesome">Awesome. I love it</string>
    <string name="notes">Note</string>
    <string name="select_lang">Select Language</string>
    <string name="english">English</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="russian">Russian</string>
    <string name="polish">Polish</string>
    <string name="delete_event">Delete the event?</string>
    <string name="event_string">Event</string>
    <string name="time_string">Time</string>
    <string name="date_string">Date</string>
    <string name="brend_string">Brend</string>
    <string name="thing_string">Thing</string>
    <string name="true_price_string">True price</string>
    <string name="sale_string">Sale</string>
    <string name="economy_string">Economy</string>
    <string name="percentage_string">Percentage</string>
    <string name="bank_name_string">Bank name</string>
    <string name="account_string">Account</string>
    <string name="account_number_string">Account number</string>
    <string name="name_sur_string">Name, Surname</string>
    <string name="credential_string">Bookmarks</string>
    <string name="reference_string">Reference</string>
    <string name="note_string">Note</string>
    <string name="search">Search Here</string>
    <string name="disable_dark_mode">Disable Dark Mode</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="edit">Edit</string>
    <string name="list_is_empty">List is empty!</string>
    <string name="bookmark">Bookmark</string>
    <string name="filled">Filled</string>
    <string name="delete_checked_items">Delete checked items</string>
    <string name="normal">Normal</string>
    <string name="Emboss">Emboss</string>
    <string name="blur">Blur</string>
    <string name="clear">Clear</string>
    <string name="drawable">Drawable</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="draws">Draws</string>
    <string name="save_and_store">Save and Store</string>
    <string name="rubber">Rubber</string>
    <string name="draw">Draw</string>
</resources>