<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/everyday_note"
        android:title="@string/everyday_notes">
        <menu>
            <item
                android:id="@+id/shopping"
                android:icon="@drawable/shopping_cart"
                android:title="@string/shoppings" />
            <item
                android:id="@+id/events"
                android:icon="@drawable/ic_baseline_cake"
                android:title="@string/events" />
            <item
                android:id="@+id/bankAccounts"
                android:icon="@drawable/ic_baseline_credit_card_24"
                android:title="@string/bank_accounts" />
            <item
                android:id="@+id/sales"
                android:icon="@drawable/ic_baseline_attach_money_"
                android:title="@string/menu_sales" />
            <item
                android:id="@+id/credentials"
                android:icon="@drawable/ic_baseline_contact_mail"
                android:title="@string/bookmarks" />
            <item
                android:id="@+id/painting"
                android:icon="@drawable/ic_baseline_draw_24"
                android:title="@string/drawable" />

        </menu>
    </item>
    <item android:title="@string/text_notes">
        <menu>
            <item android:id="@+id/textNote"
                android:title="@string/text_note"
                android:icon="@drawable/ic_baseline_note"/>
        </menu>
    </item>
    <item android:title="@string/another">
        <menu>
            <item android:id="@+id/settings"
                android:title="@string/settings"
                android:icon="@drawable/ic_baseline_settings"/>
        </menu>
    </item>
</menu>