<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <item android:title="Everyday notes">

   <menu>
        <item android:id="@+id/shopping"
            android:title="@string/shoppings"
            android:icon="@drawable/shopping_cart"/>
        <item android:id="@+id/events"
            android:title="@string/events"
            android:icon="@drawable/ic_baseline_cake"/>
        <item android:id="@+id/bankAccounts"
            android:title="@string/bank_accounts"
            android:icon="@drawable/ic_baseline_credit_card_24"/>
        <item android:id="@+id/sales"
            android:title="@string/menu_sales"
            android:icon="@drawable/ic_baseline_attach_money_"/>
        <item android:id="@+id/credentials"
            android:title="@string/bookmarks"
            android:icon="@drawable/ic_baseline_contact_mail"/>
       <item
           android:id="@+id/painting"
           android:icon="@drawable/ic_baseline_draw_24"
           android:title="@string/drawable" />
    </menu>
    </item>
    <item android:title="@string/text_note">
        <menu>
            <item android:id="@+id/textNote"
                android:title="@string/text_note"
                android:icon="@drawable/ic_baseline_note"/>
        </menu>
    </item>
    <item android:title="@string/another">
        <menu>
            <item android:id="@+id/settings"
                android:title="@string/settings"
                android:icon="@drawable/ic_baseline_settings"/>
        </menu>
    </item>

</menu>