<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/menu_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete"
        android:orderInCategory="100"
        android:title="@string/menu_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_checked_list"
        android:orderInCategory="100"
        android:title="@string/delete_checked_items"
        app:showAsAction="never" />
    <item
        android:id="@+id/normal"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_auto_fix_normal_24"
        android:title="@string/normal"/>
    <item
        android:id="@+id/add"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/baseline_add"
        android:title="@string/normal"/>
    <item
        android:id="@+id/emboss"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_draw_24"
        app:showAsAction="always"
        android:title="@string/Emboss"/>
    <item
        android:id="@+id/blur"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_blur_circular_24"
        android:title="@string/blur"/>
    <item
        android:id="@+id/clear"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/clear"/>
    <item
        android:id="@+id/share_image"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/share"/>
    <item
        android:id="@+id/save_end_store"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/save_and_store"/>
    <item
        android:id="@+id/rubber"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_crop_portrait_24"
        android:title="@string/rubber"/>


</menu>