<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/settings"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/switchModeFr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/day_mode" />

    <TextView
        android:id="@+id/shared_tv_fr"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_below="@+id/switchModeFr"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/shared" />

    <TextView
        android:id="@+id/about_sn_tv_fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shared_tv_fr"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/about_smart_note" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="110dp"
        android:id="@+id/contact"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_us"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="140dp"
        android:id="@+id/rate"/>

</FrameLayout>