<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/line_one_discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchView"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/thing_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:lines="2"
            android:hint="@string/thing"
            android:textColor="@color/teal_700" />

        <EditText
            android:id="@+id/brend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:lines="2"
            android:hint="@string/brend"
            android:textColor="@color/teal_700" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_two_discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchView"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/true_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:lines="2"
            android:hint="@string/true_price"
            android:numeric="decimal" />
        <EditText
            android:id="@+id/discount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:lines="2"
            android:hint="@string/discount"
            android:numeric="decimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/save_discount"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="12sp"
            android:text="@string/save" />
        <Button
            android:id="@+id/cancel_discount"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/save_dialog_shopping"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>
