<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/salary_account"
                android:hint="@string/salary_account"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/bank_name"
                android:inputType="text"
                android:hint="@string/bank_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/number"
                android:hint="@string/account_number"
                android:inputType="number"
                android:layout_weight="2"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/person_name_surname"
                android:hint="@string/name_surname"
                android:layout_weight="2"/>
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_dialog_bank"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/save"
                app:layout_constraintEnd_toStartOf="@+id/cancel_dialog_bank"
                app:layout_constraintHorizontal_bias="0.346"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="4dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/cancel_dialog_bank"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/save_dialog_bank"
                android:text="@string/cancel"
                android:layout_marginLeft="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.849"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="4dp"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>

