<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/goods_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius"
            android:autofillHints="Put goods name"
            android:hint="@string/goods"
            android:padding="10dp"
            android:lines="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/save_dialog_shopping"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="12sp"
            android:text="@string/save" />
        <Button
            android:id="@+id/cancel_dialog_shopping"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>