
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <com.google.android.material.appbar.AppBarLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/app_bar_layout"
       android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

      <com.google.android.material.appbar.CollapsingToolbarLayout
          android:id="@+id/collapsing_toolbar"
          android:layout_width="match_parent"
          android:layout_height="300dp"
          app:contentScrim="?attr/colorPrimary"
          app:layout_scrollFlags="scroll|exitUntilCollapsed">

         <CalendarView
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />

      </com.google.android.material.appbar.CollapsingToolbarLayout>

      <LinearLayout
          android:id="@+id/lin_layout"
          android:layout_width="match_parent"
          android:layout_height="30dp"
          android:layout_below="@+id/app_bar_layout"
          app:layout_anchor="@+id/toolbar_event"
          app:layout_anchorGravity="top|center">

         <TextView
             android:id="@+id/event_all"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="3dp"
             android:layout_marginLeft="35dp"
             android:layout_weight="1"
             android:text="@string/all" />

         <TextView
             android:id="@+id/event_day"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="3dp"
             android:layout_weight="1"
             android:text="@string/day" />

         <TextView
             android:id="@+id/event_week"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="3dp"
             android:layout_weight="1"
             android:text="@string/week" />

         <TextView
             android:id="@+id/event_month"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="3dp"
             android:layout_weight="1"
             android:text="@string/month" />

         <TextView
             android:id="@+id/event_custom"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="3dp"
             android:layout_weight="1"
             android:text="@string/custom" />
      </LinearLayout>


   </com.google.android.material.appbar.AppBarLayout>


   <androidx.core.widget.NestedScrollView
       android:id="@+id/nestedScrollView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="#ffe5e5e5"
       app:layout_behavior="@string/appbar_scrolling_view_behavior">


      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recyclerViewEvents"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

   </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>



