<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/credential"
            android:hint="@string/credentials"
            android:lines="2"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:lines="2"
            android:id="@+id/reference"
            android:hint="@string/reference"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/save_dialog_credentials"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/save" />
        <Button
            android:id="@+id/cancel_dialog_credentials"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/save_dialog_credentials"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>
